[package]
name = "lending-token"
version = "0.1.0"
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13"
cw2 = "0.13"
cw20 = "0.13.2"
cw-storage-plus = "0.13"
cosmwasm-std = { version = "1.0.0-beta8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }
